fix: improve home navigation, skeleton spacing, and background colors

--- a/src/components/DefaultMovies.css
+++ b/src/components/DefaultMovies.css
@@ -1,6 +1,5 @@
 h2{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-weight: 600;
+    font-weight: 500;
     text-align: left;
-    padding-left: 50px;
 }
