--- a/src/components/SearchBar.css
+++ b/src/components/SearchBar.css
@@ -24,17 +24,19 @@ button{
     height: 45px;
     border-radius: 7px;
     border: none;
-    background-color: rgb(44, 229, 12);
-    color: black;
-    font-size: 18px;
+    background-color: #57018d;
+    color: white;
+    font-size: 23px;
     padding: 7px;
     margin-left: 20px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 button:hover{
     cursor: pointer;
-    background-color: rgb(255, 255, 255);
-    color: rgb(1, 1, 1);
+    background-color: rgb(222, 122, 244);
+    color: rgb(0, 0, 0);
 }
+
 i{
     font-size: 30px;
 }
