--- a/src/components/SkeletonCard.css
+++ b/src/components/SkeletonCard.css
@@ -2,6 +2,7 @@
     width: 200px;
     padding-top: 10px;
     flex-shrink: 0;
+    margin-top: 30px;
 }
 
 .skeleton-poster {
